@@ -2,6 +2,7 @@
 package j.flyweight;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class BigString {
     private final List<BigChar> bigChars;
@@ -10,7 +11,7 @@ public class BigString {
         bigChars =
                 string.chars()
                         .mapToObj(c -> BigCharFactory.getInstance().getBigChar((char) c))
-                        .toList();
+                        .collect(Collectors.toList());
     }
 
     public void print() {
